fixed text overflow issue

--- a/src/client/LessonsSchedulingPagesAndComponents/SchedulingComponents/CalendarComponents/Styles/CalendarWeeklyView.scss
+++ b/src/client/LessonsSchedulingPagesAndComponents/SchedulingComponents/CalendarComponents/Styles/CalendarWeeklyView.scss
@@ -153,6 +153,7 @@ ul {
 //availability slots 
 
 .all-availability-slots {
+    overflow: hidden;
     background: lightgray;
     border-style: solid;
     border-color: red;
